fix QR code not being readable sometimes (patch by Fragger)
fixes breunigs/ingress-intel-total-conversion#487
fixes breunigs/ingress-intel-total-conversion#486

--- a/style.css
+++ b/style.css
@@ -755,6 +755,10 @@ td + td {
   padding-left: 4px;
 }
 
+#qrcode > canvas {
+  border: 8px solid white;
+} 
+
 /* redeem results *****************************************************/
 .redeem-result {
   font-size: 14px;
